--- a/src/index.pug
+++ b/src/index.pug
@@ -5,4 +5,28 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title Document
+
+        link(rel="stylesheet", href="css/main.css")
     body
+        .fixed-gradient
+        section.hero
+            .hero-image__layout
+                .m-latter
+                .eclipcse
+                    .woman-image
+
+            .container    
+                .top-panel
+                    .logo
+                        img.logo-img__left(src="images/logo.png", alt="")
+                .hero-title
+                    .__left
+                        h1
+                            |Real 
+                            br
+                            span microneedling 
+                            |results
+                .hero-subtitle
+                    .__left
+                        h2.
+                            Fast. Home use.
