--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,82 @@
-div[class*=__left],
-img[class*=__left],
-section[class*=__left]{
-    float: left;
+$dark-black: #000000;
+$dark-blue:#06045D;
+
+$light-blue: #50DEF6 ;
+$light-pink: #E385CA;
+$light-gray: #F9F9F9;
+
+$pink-gradient: transparent linear-gradient(90deg, #E385CA00 0%, #E385CA 100%) 0% 0% no-repeat padding-box;
+$blue-gradient : transparent linear-gradient(270deg, #50DEF600 0%, #50DEF6 100%) 0% 0% no-repeat padding-box;
+
+$text-shadow: 5px 5px 5px #755b5b26;
+
+$padding-medium: 30px;
+$padding-horizontal-medium: 0 30px;
+$padding-vertical-medium: 0 30px;
+
+
+$margin-top-large:160px 0 0;
+$margin-top-medium:90px 0;
+$margin-horizontal-medium: 0 30px;
+
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+
+body{
+    font-family: 'Poppins', sans-serif;
+}
+
+.container{
+    max-width: 1080px;
+    padding: $padding-medium;
+    margin: 0 auto;
+
+    &[class*=padding-remove]{
+        padding: 0px;
+    }
+}
+
+
+
+div,img,section{
+    &[class*=__left]{
+        float: left;
+    }
+    &[class*=__right]{
+        float: right;
+    }
+}
+
+.fixed-gradient{
+    width: 100%;
+    height: 100vh;
+    background: transparent linear-gradient(0deg, #E24BF900 0%, #FB33D97A 62%, #FF00C4 84%, #9100FF 100%) 0% 0% no-repeat padding-box;
+    opacity: 0.03;
+    position: fixed;
+}
+
+.hero-title{
+    max-width: 840px;
+    h1{
+        font-size: 98px;
+        font-weight: 900;
+        color:$dark-black;
+        line-height: 87px;
+        text-shadow: $text-shadow;
+        span{
+            font-size: 64px;
+            color: $dark-black;
+            line-height: 87px;
+        }
+    }
+}
+.hero-subtitle{
+    max-width: 840px;
+    margin: $margin-top-large;
+    h2{
+        font-size: 58px;
+        font-weight: 700;
+        color: $dark-black;
+        line-height: auto;
+        text-shadow: $text-shadow;
+    }
 }
