--- a/src/index.pug
+++ b/src/index.pug
@@ -147,7 +147,8 @@ html(lang="en")
                                     a(href="#")
                                         .item-title
                                             h3 Lecithin
-                                            .pin.__1
+                                            .mark.uk-animation-fade
+                                            .pin.__1.uk-animation-fade
                                                 .dot
                                         p.
                                             Functions: building and transportation
@@ -155,7 +156,8 @@ html(lang="en")
                                     a(href="#")
                                         .item-title
                                             h3 Nicotinamide
-                                            .pin.__2
+                                            .mark.uk-animation-fade
+                                            .pin.__2.uk-animation-fade
                                                 .dot                                           
                                         p.
                                             Functions: synthesis, protection
@@ -163,7 +165,116 @@ html(lang="en")
                                     a(href="#")
                                         .item-title
                                             h3 Hyaluronic acid
-                                            .pin.__3
+                                            .mark.uk-animation-fade
+                                            .pin.__3.uk-animation-fade
                                                 .dot
                                         p.
                                             Functions: moisturising, nourishing
+            // end section nourishes
+            section.effect
+                .container
+                    .title__primary-title
+                        h2 
+                            span wow 
+                            br
+                            |Effect
+                .container.__card
+                    .product-image__left
+                        .product-image__title
+                            h3 Mezoroller + ANTIAGE serum
+                        .product-image__img
+                            img(src="images/pack.png", alt="")
+                    .slideshow-effect__right
+                        div(uk-slideshow="animation: fade")
+                            .uk-slideshow-items
+                                div
+                                    .slide__title
+                                        h4 Pigmentation spots
+                                    div.item
+                                        img(src="images/slide_img_1.jpg", alt="")
+                                        p Before using Mezoluxe
+                                    div.item
+                                        img(src="images/slide_img_2.jpg", alt="")
+                                        p After 1 week using Mezoluxe
+                                    div.item
+                                        img(src="images/slide_img_3.jpg", alt="")
+                                        p WOW. Serum + Mezoroller
+                                div
+                                    .slide__title
+                                        h4 2 pam pam
+                                    div.item
+                                        img(src="images/slide_img_1.jpg", alt="")
+                                        p 2 Before using Mezoluxe
+                                    div.item
+                                        img(src="images/slide_img_2.jpg", alt="")
+                                        p 2 After 1 week using Mezoluxe
+                                    div.item
+                                        img(src="images/slide_img_3.jpg", alt="")
+                                        p 2 WOW. Serum + Mezoroller
+                            .slideshow-nav
+                                div.block__left(uk-slideshow-item="0")
+                                    img(src="images/slideshow-item-0.jpg", alt="")
+                                div.block__left(uk-slideshow-item="1")
+                                    img(src="images/slideshow-item-1.jpg", alt="")                                    
+            section.go_ahead
+                .container
+                    .title__primary-title
+                        h2 Go Ahead!
+                    .sub_title
+                        h3  60 seconds 3 times a week
+                    div.step-item
+                        .step-1
+                            .image
+                                img(src="images/step_img_1.png", alt="")
+                            .title step
+                                .number 1
+                            .text
+                                p Cleanse skin with your normal facial cleanser
+                    div.step-item
+                        .step-2
+                            .image
+                                img(src="images/step_img_2.png", alt="")
+                            .title step
+                                .number 2
+                            .text
+                                p Using mild pressure, gently roll back and forth at the same intensity on the treatment area 5-10 times in each of the four directions – horizontally, vertically and diagonally. Roll over each side of face, chin, lips, forehead and neck. Do not force the roller into your skin
+                    div.step-item
+                        .step-3
+                            .image
+                                img(src="images/step_img_3.png", alt="")
+                            .title step
+                                .number 3
+                            .text
+                                p Following treatment, apply ANTIAGE serum
+            section.the_result
+                .container
+                    .title__primary-title
+                        h2
+                            span get
+                            br
+                            | The Result
+                    .sub_title
+                        h3 Effect after first use
+                    .box__card
+                        div(uk-slideshow="animation: fade")
+                            .slideshow-image
+                            .uk-slideshow-items
+                                div
+                                    .info-block__left
+                                        .title 
+                                            h2 Pigmentation
+                                        .text
+                                            p Complexion evens out, skin becomes radiant, pigmentation spots gradually fade.
+                                    .info-image__left
+                                        img(src="images/image_after_1.jpg", alt="")
+                                div
+                                    .info-block__left
+                                        .title 
+                                            h2 Wrinkles
+                                        .text
+                                            p Complexion evens out, skin becomes radiant, pigmentation spots gradually fade.
+                                    .info-image__left
+                                        img(src="images/image_after_1.jpg", alt="")
+                            .slideshow-nav
+                                .image-navigation.__1(uk-slideshow-item="0")
+                                .image-navigation.__2(uk-slideshow-item="1")
