--- a/src/index.pug
+++ b/src/index.pug
@@ -220,7 +220,7 @@ html(lang="en")
                 .container
                     .title__primary-title
                         h2 Go Ahead!
-                    .sub_title
+                    .subtitle
                         h3  60 seconds 3 times a week
                     div.step-item
                         .step-1
@@ -253,7 +253,7 @@ html(lang="en")
                             span get
                             br
                             | The Result
-                    .sub_title
+                    .subtitle
                         h3 Effect after first use
                     .box__card
                         div(uk-slideshow="animation: fade")
@@ -261,20 +261,198 @@ html(lang="en")
                             .uk-slideshow-items
                                 div
                                     .info-block__left
-                                        .title 
+                                        .title.uk-animation-slide-top
                                             h2 Pigmentation
-                                        .text
+                                        .text.uk-animation-slide-top
                                             p Complexion evens out, skin becomes radiant, pigmentation spots gradually fade.
-                                    .info-image__left
+                                    .info-image__left.uk-animation-slide-bottom
                                         img(src="images/image_after_1.jpg", alt="")
                                 div
                                     .info-block__left
-                                        .title 
+                                        .title.uk-animation-slide-top
                                             h2 Wrinkles
-                                        .text
-                                            p Complexion evens out, skin becomes radiant, pigmentation spots gradually fade.
-                                    .info-image__left
-                                        img(src="images/image_after_1.jpg", alt="")
+                                        .text.uk-animation-slide-top
+                                            p Mezoluxe affects all face wrinkles, smoothes forehead wrinkles, nasolabial folds, and crow’s feet.
+                                    .info-image__left.uk-animation-slide-bottom
+                                        img(src="images/image_after_wrinkles.jpg", alt="")
                             .slideshow-nav
                                 .image-navigation.__1(uk-slideshow-item="0")
                                 .image-navigation.__2(uk-slideshow-item="1")
+                            .slideshow-text-nav
+                                .text-navigation(uk-slideshow-item="0")
+                                    span Pigmentation
+                                .text-navigation(uk-slideshow-item="1")
+                                    span Wrinkles
+            section.statistics
+                .container
+                    div
+                        .percent
+                            |75%
+                        .title
+                            |of woman
+                        .text
+                            p felt skin looks younger in the second week of use.
+                    div
+                        .percent
+                            |82%
+                        .title
+                            |of woman
+                        .text
+                            p felt skin looks younger in the second week of use.
+                    div
+                        .percent
+                            |83%
+                        .title
+                            |of woman
+                        .text
+                            p felt skin looks younger in the second week of use.
+            section.inspire
+                .container
+                    .title__primary-title
+                        h2 Inspire
+                    .subtitle
+                        h3 Leave your review on Mezoluxe*
+                    .desc
+                        p You can leave a review after you have bought the product
+                .review
+                    div
+                        .item__left
+                            .__left
+                                .avatar
+                                    img(src="images/avatar_1.jpg", alt="")
+                            .__right
+                                .name Amelia Taylor
+                                .job Head of a financial company
+                                .__card
+                                    .text
+                                        p.
+                                            This is the best mesotherapy set that I’ve ever used. Facial skin doesn’t bleed. You can see the effect the next day – skin becomes radiant and resilient.”
+                                        img.review-image(src="images/review_img_1.jpg", alt="")
+                        .item__left
+                            .__left
+                                .avatar
+                                    img(src="images/avatar_2.jpg", alt="")
+                            .__right
+                                .name Sophia Ball
+                                .job Nurse
+                                .__card
+                                    .text
+                                        p.
+                                            “Mezoluxe is perfect against wrinkles. No injections could produce such an effect. And perfect for home use.”                         
+                    div
+                        .item__left
+                            .__left
+                                .avatar
+                                    img(src="images/avatar_3.jpg", alt="")
+                            .__right
+                                .name Charlotte Clarke
+                                .job Manager
+                                .__card
+                                    .text
+                                        p.
+                                            “5 stars. Completely painless and completely effective. My husband says I look much better now.”
+                                        img.review-image(src="images/review_img_2.jpg", alt="")
+                        .item__left
+                            .__left
+                                .avatar
+                                    img(src="images/avatar_4.jpg", alt="")
+                            .__right
+                                .name Stacy Adwell
+                                .job Medical consultant
+                                .__card
+                                    .text
+                                        p.
+                                            “My beautician advised Mezoluxe and I’m absolutely satisfied. It works like botox: no wrinkles at all!”
+                                        img.review-image(src="images/review_img_3.jpg", alt="")
+                    div
+                        .item__left
+                            .__left
+                                .avatar
+                                    img(src="images/avatar_5.jpg", alt="")
+                            .__right
+                                .name Sarah Williams
+                                .job Teacher
+                                .__card
+                                    .text
+                                        p.
+                                            “This is my first experience with a mezoroller, and now I won't use anything else. It worked miracles even though my skin condition was poor.”
+                        
+                        
+                        .item__left
+                            .__left
+                                .avatar
+                                    img(src="images/avatar_6.jpg", alt="")
+                            .__right
+                                .name Julia Barnes
+                                .job Programmer
+                                .__card
+                                    .text
+                                        p.
+                                            “I’ve been using it for 3 months, not regularly, but I’m satisfied with the result. Frown lines disappeared, and nasolabial folds have retracted”
+                                        img.review-image(src="images/review_img_4.jpg", alt="")
+            section.its_easy
+                .container
+                    .title__primary-title
+                        h2 It’s easy
+                    .subtitle
+                        h3 3 steps on the path to perfection
+                    .steps
+                        div
+                            .number
+                                |1
+                            .title
+                                |step
+                            .text
+                                p Complete order form on our website
+                        div
+                            .number
+                                |2
+                            .title
+                                |step
+                            .text
+                                p Wait until our operator calls back to confirm details
+                        div
+                            .number
+                                |3
+                            .title
+                                |step
+                            .text
+                                p Receive delivery and start your skin's transformation
+                    .steps-images
+                        .__1
+                            img(src="images/order-step-img-1.jpg", alt="")
+                        .__2
+                            img(src="images/order-step-img-2.jpg", alt="")   
+                        .__3
+                            img(src="images/order-step-img-3.jpg", alt="")
+                        .__4
+                            img(src="images/order-step-img-4.jpg", alt="")
+            .container
+                section.order
+                    .order-image__layout
+                        .woman-image
+                    .title__primary-title
+                        h2 Mezoluxe
+                    .desc
+                        p Would you love to look incredibly younger ?
+                    .order__card
+                        .product-image
+                            img(src="images/pack.png", alt="")
+                        .product-price__price
+                            .old-price 80$
+                            .new-price
+                                |new price 
+                                span 45$
+
+                        .title
+                            h3 place an order
+                        form(action="")
+                            select(name="country")
+                                option(value="RU") Russia
+                            input(type="text" placeholder="Your name")
+                            input(type="text" placeholder="Your phone")
+                            .order-button.js-submit
+                                span Order now
+
+                    
+
