--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -55,6 +55,17 @@ body{
     }    
 }
 
+.clearfix:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
+  }
+  * html .clearfix             { zoom: 1; } /* IE6 */
+  *:first-child+html .clearfix { zoom: 1; } /* IE7 */
+
 div,img,section{
     &[class*=__left]{
         float: left;
@@ -114,6 +125,7 @@ div,section{
     height: 60px;
     padding: 15px;
     margin: 30px auto 0;
+    cursor: pointer;
 }
 
 .fixed{
@@ -250,7 +262,7 @@ div,section{
 .wrinkles,
 .stimulate{
     overflow: hidden;
-    margin-top: $margin-top-large;
+    margin-top: $margin-top-medium;
     .container{
         position: relative;
         overflow: hidden;
@@ -368,6 +380,14 @@ div,section{
             list-style: none;
             li{
                 padding-bottom: $padding-medium;
+                opacity: 0.35;
+                transition: ease-in-out .5s;
+                &.uk-active{
+                    opacity: 1;
+                }
+                &:hover{
+                    opacity: 1;
+                }
                 a{
                     color: $dark-black;
                     text-decoration: none;
@@ -581,13 +601,12 @@ section.effect{
         }
 
     }
-
 }
 /* end Section Effect */
 section.go_ahead{
     margin-top: $margin-top-medium;
     overflow: hidden;
-    .sub_title{
+    .subtitle{
         h3{
             font-size: 24px;
             color: $dark-black;
@@ -613,7 +632,7 @@ section.go_ahead{
             }
         }
         .step-2{
-            padding-bottom: 170px;
+            padding-bottom: 110px;
             .image{
                 position: absolute;
                 bottom: 0px;
@@ -657,8 +676,12 @@ section.go_ahead{
 section.the_result{
     margin-top: $margin-top-large;
     clear: both;
+    .container{
+        padding: 0;
+    }
     .title__primary-title{
         margin-bottom:30px;
+        padding: 0 $padding-medium;
         h2{
             line-height: 54px;
         }
@@ -667,6 +690,9 @@ section.the_result{
             font-size: 42px;
             text-transform: uppercase;
         }
+    }
+    .subtitle{
+        padding: 0 $padding-medium;
     }
     .box__card{
         padding-top: 30px;
@@ -736,25 +762,342 @@ section.the_result{
             height: 33px;
             background: transparent;
             border-radius: 100%;
-            border:1px dashed $white;
-            position: absolute;
+            border:2px dashed $white;
+            position: absolute;          
             &.uk-active{
-                background: $white;
+                background: $white;                
             }
             &.__1{
                 right: 50px;
                 top: 300px;
             }
             &.__2{
-                right: 60px;
-                top: 100px;
+                right: 20px;
+                top: 175px;
             }                
         }
     }
+    .slideshow-text-nav{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        padding: 0 60px 45px;
+        width: 100%;
+        > div {
+            float: left;
+            margin-right: 80px;
+            cursor: pointer;
+            &:last-child{
+                margin-right: 0;
+            }
+            &.uk-active{
+                span{
+                    color: $light-pink;
+                }
+            }
+            span{
+                font-size: 24px;
+                font-weight: 900;
+                color: $dark-black;
+            }
+        }
+
+    }
 }
 
+section.statistics{
+    margin-top: $margin-top-medium;
+    overflow: hidden;
+    > div{
+        > div{
+            width: 33.333%;
+            position: relative;
+            float: left;
+            padding-right: 30px;
+        }
+    }
+    .percent{
+        position: absolute;
+        top: 0;
+        left: 0;
+        font-size:104px;
+        font-weight: 900;
+        color: $light-blue;
+        z-index: -1;
+    }
+    .title{
+        font-size: 24px;
+        font-weight: 900;
+        line-height: 30px;
+        color: $light-pink;
+        margin-top: 90px;
+        text-align: center;
+    }
+    .text{
+        padding-top: 10px;
+        p{
+            font-size: 18px;
+            font-weight: 500;
+            line-height: 26px;
+            color: $dark-black;
+        }
+    }
+    
+}
+section.inspire{
+    margin-top: $margin-top-medium;
+    overflow: hidden;
+    .subtitle{
+        h3{
+            font-size: 24px;
+            color: $dark-black;
+            line-height: 30px;
+            font-weight: 700;
+        }
+    }
+    .desc{
+        max-width: 310px;
+        padding: 23px 0 90px 0;
+        p{
+            font-size: 24px;
+            font-weight: 500;
+            line-height: 30px;
+            color: $dark-black;
+        }
+    }
+    .review{
+        max-width: 1640px;
+        margin: 0 auto;
+        > div{
+            width: 33.333%;
+            float: left;
+        }
+        .item__left{
+            max-width: 481px;
+            padding-right: $padding-medium;
+            margin-top: $margin-top-medium;
+            &:last-child{
+            padding-right: 0;
+            }
+            .avatar{
+                width: 85px;
+                height: 85px;
+                overflow: hidden;
+                border-radius: 100%;
+                img{
+                    width: 100%;
+                    height: auto;
+                }
+            }
+            .__right{
+                max-width: 365px;
+                padding-left:20px;
+            }
+            .name{
+                font-size: 22px;
+                font-weight: 700;
+            }
 
-
+            .__card{
+                max-width: 365px;
+                padding: $padding-medium;
+                margin-top: 20px;
+                border-top-left-radius: 0;
+                border: 1px solid rgba(0,0,0,.15);
+            }
+        }
+    }
+}
+section.its_easy{
+    margin-top: $margin-top-medium;
+    overflow: hidden;
+    .subtitle{
+        h3{
+            font-size: 24px;
+            color: $dark-black;
+            line-height: 30px;
+            font-weight: 700;
+        }
+    }
+    .steps{
+        clear: both;
+        overflow: hidden;
+        >div{
+            width: 33.333%;
+            float: left;
+            position: relative;
+            padding-top: 120px;
+            padding-right: 30px;
+            &:last-child{
+                padding-right: 0;
+            }
+            .number{
+                font-size: 196px;
+                font-weight: 900;
+                position: absolute;
+                top: 0;
+                left: 0;
+                color: $light-blue;
+                opacity: 0.5;
+                z-index: -1;
+            }
+            .title{
+                font-size: 38px;
+                font-weight: 900;
+                line-height: 48px;
+                color: $light-pink;
+                text-align: center;
+            }
+            .text{
+                p{
+                    font-size: 18px;
+                    font-weight: 500;
+                    line-height: 26px;
+                    color: $dark-black;
+                }
+            }
+        }
+    }
+    .steps-images{
+        clear: both;
+        overflow: hidden;
+        margin-top: 50px;
+        padding: 50px 0 0;
+        >div{
+            float: left;
+            overflow: hidden;
+            position: relative;
+            z-index: 1;
+            box-shadow: $card-shadow;
+            img{
+                width: 100%;
+                height: auto;
+            }
+        }
+        .__1{
+            width: 362px;
+            height: 240px;
+            z-index: 4;
+        }
+        .__2{
+            width: 318px;
+            height: 212px;
+            margin: -50px 0 0 -100px;
+            z-index: 3;
+        }
+        .__3{
+            width: 308px;
+            height: 205px;
+            margin: 30px 0 0 -130px;
+            z-index: 2;            
+        }
+        .__4{
+            width: 312px;
+            height: 207px;
+            margin: -25px 0 0 -100px;            
+        }           
+    }
+}
+section.order{
+    position: relative;
+    margin-top: $margin-top-large;
+    .order-image__layout{
+        position: absolute;
+        right: 0;
+        top: 0;
+        z-index: -1;
+        .woman-image{
+            position: absolute;
+            top: 0;
+            right: -300px;
+            width: 810px;
+            height: 898px;
+            background: url(../images/order_image.svg);
+            background-position: center;
+            background-repeat: no-repeat ;
+            background-size: contain; 
+            // overflow: hidden;
+    
+        }
+    }
+    .desc{
+        max-width: 310px;
+        padding: 23px 0 90px 0;
+        p{
+            font-size: 24px;
+            font-weight: 500;
+            line-height: 30px;
+            color: $dark-black;
+        }
+    }
+    .order__card{
+        max-width: 710px;
+        margin-bottom: 220px;
+        position: relative;
+        .product-image{
+            width: 360px;
+            height: 270px;
+            position: absolute;
+            bottom: 115px;
+            right: 20px;
+            img{
+                width: 100%;
+                height: auto;
+            }
+        }
+        .product-price__price{
+            position: absolute;
+            bottom: 60px;
+            right: 40px;
+            .old-price{
+                font-size: 24px;
+                font-weight: 300;
+                text-decoration: line-through;
+                color: $dark-black;
+            }
+            .new-price{
+                font-size: 24px;
+                font-weight: 900;
+                span{
+                    font-size: 44px;
+                    line-height: 44px;
+                    padding-left: 70px;
+                }
+            }
+        }
+        .title{
+            text-transform: uppercase;
+            max-width: 310px;
+            h3{
+                font-size: 28px;
+                font-weight: 900;
+                text-align: center;
+                color: $light-pink;
+            }
+        }
+        form{
+            margin-top: 45px;
+            max-width: 310px;
+            select,
+            input{
+                display: block;
+                border:none;
+                background: rgba(0,0,0,.15);
+                border-radius: 35px;
+                padding:15px 30px ;
+                width: 100%;
+                font-size: 18px;
+                margin-bottom: 10px ;
+            }
+            ::placeholder{
+                color: $dark-black;
+                font-size: 18px;
+                font-weight: 500;
+                line-height: 30px;                
+            }
+        }
+    }
+}
 
 @import "./components/switcher.scss";
 @import "./components/animation.scss";
