--- a/src/index.pug
+++ b/src/index.pug
@@ -49,6 +49,7 @@ html(lang="en")
                                     |Real 
                                     br
                                     span microneedling 
+                                    br
                                     |results
                         .hero-subtitle
                                 h2.
@@ -147,7 +148,37 @@ html(lang="en")
                             .nourishes-desc
                                 p.
                                     ANTIAGE serum immediately gets into deep layers of the skin through holes made by a mezoroller. It acts directly in cells, stimulating collagen synthesis and smoothing wrinkles from inside.
-                        div.__left.scroll-spy
+                        
+                        div.mobile.switcher
+                                li.switcher-item
+                                    .item-title
+                                        h3 Lecithin
+                                    p.
+                                        Functions: building and transportation
+                                    .desc
+                                        ._1
+                                            p.
+                                                Restores damaged cells, helps nutrients and vitamins to penetrate the skin better.
+                                li.switcher-item
+                                    .item-title
+                                        h3 Nicotinamide
+                                    p.
+                                        Functions: synthesis, protection
+                                    .desc
+                                        ._2
+                                            p.
+                                                Text item 2. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est blanditiis nihil illum porro eum optio eos earum aliquam nam id?
+                                li.switcher-item
+                                    .item-title
+                                        h3 Hyaluronic acid
+                                    p.
+                                        Functions: moisturising, nourishing                                
+                                    .desc
+                                        ._3
+                                            p.
+                                                Text item 3, dolor sit amet consectetur adipisicing elit. Est blanditiis nihil illum porro eum optio eos earum aliquam nam id?                         
+
+                        div.__left.desktop.scroll-spy
                             .skin-image
                                 img(src="images/skin-image.png", alt="")
                                 .desc
@@ -158,11 +189,11 @@ html(lang="en")
                                         li._2
                                             p.
                                                 Text item 2. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Est blanditiis nihil illum porro eum optio eos earum aliquam nam id?
-                                        li
+                                        li._3
                                             p.
                                                 Text item 3, dolor sit amet consectetur adipisicing elit. Est blanditiis nihil illum porro eum optio eos earum aliquam nam id?
 
-                        div.__left.scroll-spy
+                        div.__left.desktop.scroll-spy
                             ul.switcher(uk-switcher="connect: .switcher-container; animation: uk-animation-fade;")
                                 li.switcher-item
                                     a(href="#")
