--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,6 +27,24 @@ $margin-horizontal-medium: 0 30px;
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 
+.mobile{
+    @media screen and (min-width: 640px){
+        display: none;
+    }
+    @media screen and (max-width: 640px) {
+        display: block;
+    }
+}
+.desktop{
+    @media screen and (max-width: 640px){
+        display: none;
+    }
+    @media screen and (min-width: 640px) {
+        display: block;
+    }    
+}
+
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -51,7 +69,7 @@ body{
         padding: 0px;
     }
     @media (max-width: 980px) {
-        display: none;
+        // display: none;
     }    
 }
 
@@ -161,6 +179,9 @@ div,section{
             font-weight: 900;
             line-height: 94px;
             text-shadow: $text-shadow;
+            @media screen and (max-width: 640px) {
+                font-size: 54px;
+            }
         }
     }
     &[class*=__card]{
@@ -202,7 +223,7 @@ div,section{
     text-align: center;
     font-weight: 700;  
     border-radius: 40px;
-    width: 280px;
+    max-width: 280px;
     height: 60px;
     padding: 15px;
     margin: 30px auto 0;
@@ -473,28 +494,46 @@ div,section{
         .hero-title{
             width: 840px;
             margin-top: 200px;
+            @media screen and (max-width: 800px){
+                margin-top: 60px;
+            }
             h1{
                 font-size: 98px;
                 font-weight: 900;
                 color:$dark-black;
                 line-height: 87px;
                 text-shadow: $text-shadow;
+                @media screen and (max-width: 800px){
+                    font-size: 68px;
+                    line-height: 78px;
+                }
                 span{
                     font-size: 64px;
                     color: $dark-black;
                     line-height: 87px;
+                    @media screen and (max-width: 800px){
+                        font-size: 44px;
+                        line-height: 57px;
+                    }
                 }
             }
         }
         .hero-subtitle{
             width: 840px;
             margin-top: $margin-top-large;
+            @media screen and (max-width: 800px){
+                margin-top: 60px;
+                margin-bottom: 380px;
+            }
             h2{
                 font-size: 58px;
                 font-weight: 700;
                 color: $dark-black;
                 line-height: auto;
                 text-shadow: $text-shadow;
+                @media screen and (max-width: 800px){
+                    font-size: 38px;
+                }                
             }
         }
         .hero-image__layout{
@@ -502,8 +541,14 @@ div,section{
             right: 0;
             top: -220px;
             z-index: -1;
+            @media screen and (max-width: 800px){
+                width: 100%;
+                max-height: 450px;
+                top: auto;
+                bottom: -380px;
+            }
             .woman-image{
-                position: absolute;
+                position: relative;
                 top: 0;
                 right: -300px;
                 width: 810px;
@@ -513,7 +558,15 @@ div,section{
                 background-repeat: no-repeat ;
                 background-size: contain; 
                 // overflow: hidden;
-        
+                @media screen and (max-width: 800px){
+                    width: 600px;
+                    height: 600px;
+                    right: auto;
+                    margin: 0 auto;
+                }
+                @media screen and (max-width: 680px){
+                    width: 100%;
+                }
             }
         }
 }
@@ -525,6 +578,40 @@ div,section{
     .product-price__left__card{
         width: 510px;
         text-align: center;
+        @media screen and (max-width: 1152px){
+            max-width: 50%;
+        }
+        @media screen and (max-width: 800px){
+            max-width: 100%;
+            width: 100%;
+            float: left;
+        }         
+        .product-image{
+            max-width: 420px;
+            @media screen and (max-width: 1152px){
+                width: 300px;
+                float: right;
+            }
+            @media screen and (max-width: 800px){
+                width: 100%;
+                float: left;
+            }                        
+            img{
+                width: 100%;
+            }
+        }
+        .product-price__price{
+            clear: both;
+            @media screen and (max-width: 800px){
+                width: 280px;
+                margin: 0 auto;
+            }                   
+            .new-price{
+                @media screen and (max-width: 1024px){
+                    font-size: 24px;
+                }
+            }
+        }
     }
     .product-info__right{
         padding-top: $padding-medium;
@@ -532,8 +619,19 @@ div,section{
         padding-left: $padding-large;
         padding-right: 0;
         max-width: 480px;
+        @media screen and (max-width: 1152px){
+            max-width: 50%;
+        }
+        @media screen and (max-width: 800px){
+            max-width: 100%;
+            width: 100%;
+            padding-right: $padding-large;
+        }         
         .product-info__item{
             margin-top: $margin-top-large;
+            @media screen and (max-width: 800px){
+                margin-top: $margin-top-medium;
+            }
             &:first-child{
                 margin: 0;
             }
@@ -597,7 +695,7 @@ div,section{
     .image-item__right{
         position: relative;
         max-width: 680px;
-        height: 380px;
+        height: 370px;
         overflow: hidden;
         border-radius: 15px;
         box-shadow: $card-shadow;
@@ -606,11 +704,27 @@ div,section{
             width: 100%;
             height: auto;
         }
+        @media screen and (max-width:800px) {
+            float: left;
+            clear: both;
+            margin: 40px auto;
+        }
+        @media screen and (max-width: 480px){
+            height: 235px;
+            margin-bottom: 20px;
+            margin-top: 20px;
+        }
     }
     .content-item__left{
         width: 33.333%;
         position: relative;
         margin-top: $margin-top-medium ;
+        @media screen and (max-width:800px) {
+            padding: 0 10px;
+            width: 280px;
+            float: none;
+            margin: 0 auto ;
+        }        
         .content-item__image{
             position: absolute;
             top: 0;
@@ -618,6 +732,11 @@ div,section{
             width: 280px;
             text-align: center;
             z-index: -1;
+            @media screen and (max-width:800px) {
+                padding: 0 15px;
+                top: -140px;
+
+            }             
             img{
                 width: 100%;
                 height: auto;
@@ -626,6 +745,12 @@ div,section{
         .content-item__text{
             padding: $padding-medium;
             margin-top: 140px;
+            @media screen and (max-width:800px) {
+                padding: 0;
+            }
+            @media screen and (max-width:640px) {
+
+            }             
             p{
                 font-size: 18px;
                 font-weight: 500;
@@ -654,8 +779,18 @@ div,section{
         &>div{
             width: 33.333%;
             padding-left: $padding-medium;
+            @media screen and (max-width:800px){
+                width: 50%;
+            }
+            @media screen and (max-width:640px){
+                width: 100%;
+            }            
             &:first-child{
                 padding-left: 0;
+                @media screen and (max-width:800px){
+                    width: 100%;
+                    margin-bottom: 30px;
+                }
             }
         }
         .nourishes-desc{
@@ -677,7 +812,7 @@ div,section{
                 font-weight: 500;
                 line-height: 24px;
                 text-align: center;
-                color: $dark-black;    
+                color: $dark-black;
                 ._1.uk-active > .dot{
                     transform: rotate(0deg);
                 }
@@ -685,10 +820,16 @@ div,section{
         }
         .switcher{
             list-style: none;
+
             li{
                 padding-bottom: $padding-medium;
                 opacity: 0.35;
                 transition: ease-in-out .5s;
+                @media screen and (max-width: 640px) {
+                    width: 100%;
+                    float: left;
+                    opacity: 1;
+                }
                 &.uk-active{
                     opacity: 1;
                 }
@@ -700,6 +841,10 @@ div,section{
                     text-decoration: none;
                 }
                 .item-title{
+                    @media screen and (nax-width:640px ){
+                        margin-top: 30px;
+                        margin-bottom: 10px;
+                    }
                     h3{
                         font-size: 24px;
                         font-weight: 700;
@@ -719,6 +864,12 @@ div,section{
                         // overflow: hidden;
                         transition: ease-in-out .5s;
                     }
+                }
+                .desc{
+                    @media screen and (nax-width:640px ){
+                        margin-top: 30px;
+                        // margin-bottom: 10px;
+                    }                    
                 }
                 p{
                     clear: both;
@@ -763,10 +914,20 @@ div,section{
                             
                             &.__1{
                                 top: 150px;
+                                @media screen and (max-width: 640px) {
+                                    top: -135px;
+                                    left: 147px;
+                                }     
                                 .dot{
                                     transform: rotate(-29deg);
+                                    @media screen and (max-width: 640px) {
+                                        transform: rotate(112deg);
+                                    }                                     
                                     &::before{
                                         width: 275px;
+                                        @media screen and (max-width: 640px) {
+                                            width: 165px;
+                                        }                                          
                                     } 
                                 }
                             }
@@ -817,6 +978,9 @@ div,section{
 section.effect{
     margin-top: $margin-top-large;
     clear: both;
+    @media screen and (max-width: 640px) {
+        margin: 0 15px;
+    }
     .title__primary-title{
         margin-bottom:30px;
         h2{
@@ -830,18 +994,33 @@ section.effect{
     .__card{
         padding-top: 30px;
         padding-bottom: 30px;
+        @media screen and (max-width: 640px){
+            padding-left: 15px;
+            padding-right: 15px;
+        }        
     }
     .product-image__left{
         width: 33.333%;
         overflow: hidden;
+        @media screen and (max-width: 640px){
+            width: 100%;
+        }
         .product-image__title{
             font-size: 34px;
             font-weight: 700;
             line-height: 44px;
             color: $dark-blue;
+            @media screen and (max-width: 640px){
+                font-size: 28px;
+                line-height: 32px;
+                text-align: center;
+            }            
         }
         .product-image__img{
             margin-top: $margin-top-medium;
+            @media screen and (max-width: 640px){
+                margin-top: 10px;
+            }
             img{
                 width: 340px;
                 margin-left: -32px;
@@ -853,9 +1032,16 @@ section.effect{
         width: 66.666%;
         padding: 0 $padding-medium;
         padding-right: 0;
+        @media screen and (max-width: 640px){
+            width: 100%;
+            padding: 0;
+        }        
         .uk-slideshow-items{
             position: relative;
             min-height: 400px !important;
+            @media screen and (max-width: 640px){
+                min-height: 170px !important;
+            }
             > div {
                 .slide__title{
                     color: $light-pink;
@@ -872,12 +1058,17 @@ section.effect{
                 float: left;
                 height: 367px ;
                 padding: 20px 20px 20px 0;
+                @media screen and (max-width: 640px){
+                    height: 160px;
+                    padding-right: 10px;
+                }
                     &:last-child{
                         padding-right: 0;
                     }
                     img{
                         width: 100%;
-                        height: 267px ;
+                        height: auto;
+                        max-height: 267px ;
                     }
                 }
             }
@@ -889,6 +1080,11 @@ section.effect{
                 border-radius: 100%;
                 overflow: hidden;
                 margin: 21px 15px;
+                @media screen and (max-width: 640px){
+                    width: 30px;
+                    height: 30px;
+                    margin: 21px 5px;
+                }
                 &:last-child{
                 }
                 &.uk-active{
@@ -898,11 +1094,26 @@ section.effect{
                     padding: 2px;
                     margin: 15px 9px;
                     box-shadow: $card-shadow;
+                    @media screen and (max-width: 640px){
+                        width: 30px;
+                        height: 30px;
+                        margin: 21px 5px;
+                        padding: 0;
+                    }
+                    img{
+                        @media screen and (max-width: 640px){
+                            width: 22px;
+                            height: 22px;
+                        }
+                    }
                 }
                 img{
                     // width: 100%;
                     width: 67px;
                     border-radius: 100%;
+                    @media screen and (max-width: 640px){
+                        width: 30px;
+                    }                    
                 }
             }
         }
@@ -927,23 +1138,54 @@ section.go_ahead{
         padding: $padding-medium;
         margin-top: 50px;
         position: relative;
+        @media screen and (max-width: 640px) {
+            width: 100%;
+        }
+        @media screen and (min-width:640px) and (max-width: 800px) {
+            width: 60%;
+            float: right;
+            clear: both;
+        } 
+        &:last-child{
+            @media screen and (max-width:800px){
+                margin-top: 0;
+            }
+        }       
         .step-1,
         .step-3{
             padding-top: 200px;
+            @media screen and (max-width:800px){
+                padding-top: 50px;
+            }
         }
         .step-1{
             .image{
                 position: absolute;
                 top: 0;
                 left: 50px;
+                @media screen and (max-width: 800px) {
+                    left: -50%;
+                    right: auto;
+                    top: 0;
+                    z-index: -1;
+                }
             }
         }
         .step-2{
             padding-bottom: 110px;
+            @media screen and (max-width: 800px) {
+                padding-bottom: 0;
+            }
             .image{
                 position: absolute;
                 bottom: 0px;
                 right: 20px;
+                @media screen and (min-width:480px) and (max-width: 800px) {
+                    left: -50%;
+                    right: auto;
+                    top: 0;
+                    transform: rotate(-34deg);
+                }                
             }            
         }
         .step-3{
@@ -951,6 +1193,19 @@ section.go_ahead{
                 position: absolute;
                 top: -100px;
                 right:50px;
+                @media screen and (min-width:480px) and (max-width: 800px) {
+                    left: -50%;
+                    right: auto;
+                    top: 0;
+                }                
+                @media screen and (max-width: 480px) {
+                    top: auto;
+                    bottom: 0px;
+                }                
+            }
+            @media screen and (max-width: 480px) {
+                padding-top: 0;
+                padding-bottom: 220px;
             }
         }
         .title{
